--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="flex items-center gap-x-12">
                 <a href="#" class="-m-1.5 p-1.5">
                     <span class="sr-only">Your Company</span>
-                    <img class="h-12 w-44" src="./assets/logo_white_new.png" alt="">
+                    <img class="h-12 w-44" src="./assets/icons/logo.svg" alt="">
                 </a>
                 <div class="hidden lg:flex lg:gap-x-12">
                     <a href="#" class="text-sm font-semibold leading-6 text-gray-900">Home</a>
@@ -49,7 +49,7 @@
             </div>
             <div class="hidden lg:flex">
                 <a href="#" class="pt-2 px-1 text-sm font-semibold leading-6 text-gray-900">Follow Us:</a>
-                <img class="h-10 pt-0.5 w-auto mr-2" src="./assets/icons/linkedin.png" alt="">
+                <img class="h-10 pt-0.5 w-auto mr-2" src="./assets/icons/in.svg" alt="">
                 <button type="button"
                     class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">Contact
                     us</button>
@@ -64,7 +64,7 @@
                 <div class="flex items-center justify-between">
                     <a href="#" class="-m-1.5 p-1.5">
                         <span class="sr-only">Your Company</span>
-                        <img class="h-12 w-44" src="./assets/logo_white_new.png" alt="">
+                        <img class="h-12 w-44" src="./assets/icons/logo.svg" alt="">
                     </a>
                     <button type="button" class="-m-2.5 rounded-md p-2.5 text-gray-700">
                         <span class="sr-only">Close menu</span>
@@ -100,7 +100,17 @@
     </header>
     <div class="container-1">
         <p class="heading-1 ">Let’s Build the next big <br /> thing in <span class="blue-text">education</span> </p>
-        <div class="button-container shadow-md mt-4">
+        <div class="flex justify-around">
+            <button type="submit"
+            class="mt-8 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">Get
+            In Touch</button>
+        </div>
+        <div class="flex justify-around mx-auto city-card">
+            <img class="city" src="./assets/icons/city.svg" alt="">
+            <img class="city" src="./assets/icons/city.svg" alt="">
+        </div>
+      
+        <!-- <div class="button-container shadow-md mt-4">
             <form class="mt-10 max-w-md pt-1.5">
                 <div class="flex gap-x-4">
                     <label for="email-address" class="sr-only">Email address</label>
@@ -112,19 +122,19 @@
                         In Touch</button>
                 </div>
             </form>
-        </div>
+        </div> -->
     </div>
 
     <div class="container-2 py-32">
         <div class="mini-container-2">
             <div class="block-container">
                 <div class="card-container">
-                    <img class="block-image" src="./assets/blocks/block1.png" alt="">
-                    <img class="block-image" src="./assets/blocks/block2.png" alt="">
+                    <img class="block-image" src="./assets/blocks/block1.svg" alt="">
+                    <img class="block-image" src="./assets/blocks/block2.svg" alt="">
                 </div>
                 <div class="card-container">
-                    <img class="block-image" src="./assets/blocks/block3.png" alt="">
-                    <img class="block-image" src="./assets/blocks/block4.png" alt="">
+                    <img class="block-image" src="./assets/blocks/block3.svg" alt="">
+                    <img class="block-image" src="./assets/blocks/block4.svg" alt="">
                 </div>
             </div>
             <div class="content-container-1">
@@ -160,7 +170,7 @@
 
             </p>
             <button type="submit"
-                class="w-48 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">
+                class="mx-auto my-2 w-48 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">
                 Know More About Us</button>
         </div>
         <div>
@@ -206,7 +216,7 @@
     <footer class="footer">
         <div class="footer-container flex">
             <div class="footer-sub">
-                <img class="h-auto w-64" src="./assets/logo_white_new.png" alt="">
+                <img class="h-auto w-64" src="./assets/icons/logo.svg" alt="">
                 <p class="phone-mail-text flex"><img class="h-auto w-6 mr-2" src="./assets/icons/phone.svg" alt=""> +91
                     234123333334</p>
                 <p class="phone-mail-text flex"><img class="h-auto w-6 mr-2" src="./assets/icons/mail.svg"
