--- a/index.html
+++ b/index.html
@@ -102,14 +102,13 @@
         <p class="heading-1 ">Let’s Build the next big <br /> thing in <span class="blue-text">education</span> </p>
         <div class="flex justify-around">
             <button type="submit"
-            class="mt-8 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">Get
-            In Touch</button>
+                class="mt-8 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">Get
+                In Touch</button>
         </div>
         <div class="flex justify-around mx-auto city-card">
-            <img class="city" src="./assets/icons/city.svg" alt="">
-            <img class="city" src="./assets/icons/city.svg" alt="">
+            <img class="" src="./assets/1.svg" alt="">
         </div>
-      
+
         <!-- <div class="button-container shadow-md mt-4">
             <form class="mt-10 max-w-md pt-1.5">
                 <div class="flex gap-x-4">
@@ -170,11 +169,85 @@
 
             </p>
             <button type="submit"
-                class="mx-auto my-2 w-48 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">
+                class="my-2 w-48 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">
                 Know More About Us</button>
         </div>
         <div>
             <img class="tech-image" src="./assets/techstack.svg" alt="">
+        </div>
+    </div>
+
+    <div class="container-4 flex justify-around">
+        <div class="sub-1-container-4">
+            <p class="red-font"> HOW WE DO IT?</p>
+            <p class="black-font">Services</p>
+            <p class="grey-font">
+                Bringing you the combination of Innovative Tech Classification combined with Customer Centric
+                User Interface to make
+                your processes & products efficient & customer friendly.
+
+            </p>
+        </div>
+        <div class="white-cards-container">
+            <div class="white-cards">
+                <img class="w-10 h-10" src="./assets/icons/file.svg" alt="">
+                <p class="white-card-content">Wholesome Brand Positioning</p>
+            </div>
+            <div class="white-cards">
+                <img class="w-10 h-10" src="./assets/icons/file.svg" alt="">
+                <p class="white-card-content">Enhance Brand
+                    Exposure</p>
+            </div>
+            <div class="white-cards">
+                <img class="w-10 h-10" src="./assets/icons/file.svg" alt="">
+                <p class="white-card-content">Customer
+                    Acquistition</p>
+            </div>
+            <div class="white-cards">
+                <img class="w-10 h-10" src="./assets/icons/file.svg" alt="">
+                <p class="white-card-content">Business Expansion</p>
+            </div>
+        </div>
+    </div>
+    <div class="progress-bg">
+        <div class="clients-container">
+            <div class="clients-container-images">
+                <img class="w-auto h-12" src="./assets/clients/alpl.svg" alt="">
+                <img class="w-auto h-12" src="./assets/clients/cxs.svg" alt="">
+                <img class="w-auto h-12" src="./assets/clients/clematis.svg" alt="">
+                <img class="w-auto h-12" src="./assets/clients/vet.svg" alt="">
+                <img class="w-auto h-12" src="./assets/clients/taras.svg" alt="">
+                <img class="w-auto h-12" src="./assets/clients/agraga.svg" alt="">
+            </div>
+
+            <div class="container-progress">
+                <div class="progress">
+                    <span class="title timer" data-from="0" data-to="85" data-speed="1800">85</span>
+                    <div class="overlay"></div>
+                    <div class="left"></div>
+                    <div class="right"></div>
+                </div>
+                <div class="progress">
+                    <span class="title timer" data-from="0" data-to="70" data-speed="1500">70</span>
+                    <div class="overlay"></div>
+                    <div class="left"></div>
+                    <div class="right"></div>
+                </div>
+
+                <div class="progress">
+                    <span class="title timer" data-from="0" data-to="70" data-speed="1500">70</span>
+                    <div class="overlay"></div>
+                    <div class="left"></div>
+                    <div class="right"></div>
+                </div>
+
+                <div class="progress">
+                    <span class="title timer" data-from="0" data-to="85" data-speed="1800">85</span>
+                    <div class="overlay"></div>
+                    <div class="left"></div>
+                    <div class="right"></div>
+                </div>
+            </div>
         </div>
     </div>
 
