--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         }
     </script>
     <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
-    <title>Codeup Global</title>
+    <title>Codeup</title>
 </head>
 
 <body>
