--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./styles.css">
     <link rel="icon" type="image/x-icon" href="./assets/icons/logo.svg">
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="./index.js"></script>
     <script>
         tailwind.config = {
             theme: {
@@ -23,7 +24,7 @@
     <title>Codeup</title>
 </head>
 
-<body>
+<body onload="loadcarousel();">
     <header class="bg-white">
         <nav class="mx-auto flex max-w-7xl items-center justify-between p-6 lg:px-8" aria-label="Global">
             <div class="flex items-center gap-x-12">
@@ -178,6 +179,150 @@
         </div>
     </div>
 
+    <div>
+        <p class="red-font text-center">HOW WE DO IT</p>
+        <p class="black-font text-center">Our Company's Versatile Use Cases</p>
+        <!-- Slideshow container -->
+        <div class="ver-slideshow-container py-16">
+
+            <!-- Full-width images with number and caption text -->
+            <div class="mySlidesTwo fade">
+                <div class="numbertext">1 / 3</div>
+                <div class="ver-carousel-card">
+                    <div class="ver-cnt">
+                        <div class="ver-crl-container">
+                            <img src="./assets/versatile/verasatile1.svg" class="ver-crl-image">
+                            <div class="p-8">
+                                <p class="ver-header-font">Usecase 1:</p>
+                                <p class="normal-font mt-4">Unlock the full potential of our company's use case and
+                                    witness the transformative power it holds. From streamlining operations to enhancing
+                                    customer experiences, our innovative solution revolutionizes the way businesses
+                                    operate. </p>
+                            </div>
+                            <div class="px-4">
+                                <button type="submit"
+                                    class="w-full mx-auto text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">
+                                    Read more</button>
+                            </div>
+
+                        </div>
+                        <div class="ver-crl-container">
+                            <img src="./assets/versatile/vesatile2.svg" class="ver-crl-image">
+                            <div class="p-8">
+                                <p class="ver-header-font">Usecase 1:</p>
+                                <p class="normal-font mt-4">Unlock the full potential of our company's use case and
+                                    witness the transformative power it holds. From streamlining operations to enhancing
+                                    customer experiences, our innovative solution revolutionizes the way businesses
+                                    operate. </p>
+                            </div>
+                            <div class="px-4">
+                                <button type="submit"
+                                    class="w-full mx-auto text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">
+                                    Read more</button>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <!-- <div class="text">Caption Text</div> -->
+            </div>
+
+            <div class="mySlidesTwo fade">
+                <div class="numbertext">2 / 3</div>
+                <div class="ver-carousel-card">
+                    <div class="ver-cnt">
+                        <div class="ver-crl-container">
+                            <img src="./assets/versatile/verasatile1.svg" class="ver-crl-image">
+                            <div class="p-8">
+                                <p class="ver-header-font">Usecase 1:</p>
+                                <p class="normal-font mt-4">Unlock the full potential of our company's use case and
+                                    witness the transformative power it holds. From streamlining operations to enhancing
+                                    customer experiences, our innovative solution revolutionizes the way businesses
+                                    operate. </p>
+                            </div>
+                            <div class="px-4">
+                                <button type="submit"
+                                    class="w-full mx-auto text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">
+                                    Read more</button>
+                            </div>
+
+                        </div>
+                        <div class="ver-crl-container">
+                            <img src="./assets/versatile/vesatile2.svg" class="ver-crl-image">
+                            <div class="p-8">
+                                <p class="ver-header-font">Usecase 1:</p>
+                                <p class="normal-font mt-4">Unlock the full potential of our company's use case and
+                                    witness the transformative power it holds. From streamlining operations to enhancing
+                                    customer experiences, our innovative solution revolutionizes the way businesses
+                                    operate. </p>
+                            </div>
+                            <div class="px-4">
+                                <button type="submit"
+                                    class="w-full mx-auto text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">
+                                    Read more</button>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <!-- <div class="text">Caption Two</div> -->
+            </div>
+
+            <div class="mySlidesTwo fade">
+                <div class="numbertext">3 / 3</div>
+                <div class="ver-carousel-card">
+                    <div class="ver-cnt">
+                        <div class="ver-crl-container">
+                            <img src="./assets/versatile/verasatile1.svg" class="ver-crl-image">
+                            <div class="p-8">
+                                <p class="ver-header-font">Usecase 1:</p>
+                                <p class="normal-font mt-4">Unlock the full potential of our company's use case and
+                                    witness the transformative power it holds. From streamlining operations to enhancing
+                                    customer experiences, our innovative solution revolutionizes the way businesses
+                                    operate. </p>
+                            </div>
+                            <div class="px-4">
+                                <button type="submit"
+                                    class="w-full mx-auto text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">
+                                    Read more</button>
+                            </div>
+
+                        </div>
+                        <div class="ver-crl-container">
+                            <img src="./assets/versatile/vesatile2.svg" class="ver-crl-image">
+                            <div class="p-8">
+                                <p class="ver-header-font">Usecase 1:</p>
+                                <p class="normal-font mt-4">Unlock the full potential of our company's use case and
+                                    witness the transformative power it holds. From streamlining operations to enhancing
+                                    customer experiences, our innovative solution revolutionizes the way businesses
+                                    operate. </p>
+                            </div>
+                            <div class="px-4">
+                                <button type="submit"
+                                    class="w-full mx-auto text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">
+                                    Read more</button>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <!-- <div class="text">Caption Three</div> -->
+            </div>
+
+            <!-- Next and previous buttons -->
+            <a class="prev shadow-md" onclick="plusSlides2(-1)">&#10094;</a>
+            <a class="next shadow-md" onclick="plusSlides2(1)">&#10095;</a>
+        </div>
+        <br>
+
+        <!-- The dots/circles -->
+        <!-- <div style="text-align:center">
+            <span class="dot2" onclick="currentSlide2(1)"></span>
+            <span class="dot2" onclick="currentSlide2(2)"></span>
+            <span class="dot2" onclick="currentSlide2(3)"></span>
+        </div> -->
+    </div>
+
     <div class="container-4 flex justify-around">
         <div class="sub-1-container-4">
             <p class="red-font"> HOW WE DO IT?</p>
@@ -210,6 +355,7 @@
             </div>
         </div>
     </div>
+
     <div class="progress-bg">
         <div class="clients-container">
             <div class="clients-container-images">
@@ -250,6 +396,83 @@
                 </div>
             </div>
         </div>
+    </div>
+
+    <div>
+        <p class="black-font text-center">Customer Case Studies</p>
+        <!-- Slideshow container -->
+        <div class="slideshow-container py-16">
+
+            <!-- Full-width images with number and caption text -->
+            <div class="mySlides fade">
+                <div class="numbertext">1 / 3</div>
+                <div class="carousel-card shadow-2xl">
+                    <img src="./assets/customer/carousel1.svg" class="carousel-width">
+                    <div class="carousel-content">
+                        <p class="black-font">Case study title 1:</p>
+                        <p class="normal-font">
+                            Bringing you the combination of Innovative Tech Classification combined
+                            with Customer Centric User Interface to make your processes & products efficient
+                            & customer friendly.
+                        </p>
+                        <button type="submit"
+                            class="w-32 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">
+                            Read more</button>
+                    </div>
+                </div>
+                <!-- <div class="text">Caption Text</div> -->
+            </div>
+
+            <div class="mySlides fade">
+                <div class="numbertext">2 / 3</div>
+                <div class="carousel-card shadow-2xl">
+                    <img src="./assets/customer/carousel1.svg" class="carousel-width">
+                    <div class="carousel-content">
+                        <p class="black-font">Case study title 1:</p>
+                        <p class="normal-font">
+                            Bringing you the combination of Innovative Tech Classification combined
+                            with Customer Centric User Interface to make your processes & products efficient
+                            & customer friendly.
+                        </p>
+                        <button type="submit"
+                            class="w-32 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">
+                            Read more</button>
+                    </div>
+                </div>
+                <!-- <div class="text">Caption Two</div> -->
+            </div>
+
+            <div class="mySlides fade">
+                <div class="numbertext">3 / 3</div>
+                <div class="carousel-card shadow-2xl">
+                    <img src="./assets/customer/carousel1.svg" class="carousel-width">
+                    <div class="carousel-content">
+                        <p class="black-font">Case study title 1:</p>
+                        <p class="normal-font">
+                            Bringing you the combination of Innovative Tech Classification combined
+                            with Customer Centric User Interface to make your processes & products efficient
+                            & customer friendly.
+                        </p>
+                        <button type="submit"
+                            class="w-32 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">
+                            Read more</button>
+                    </div>
+                </div>
+                <!-- <div class="text">Caption Three</div> -->
+            </div>
+
+            <!-- Next and previous buttons -->
+            <a class="prev shadow-md" onclick="plusSlides(-1)">&#10094;</a>
+            <a class="next shadow-md" onclick="plusSlides(1)">&#10095;</a>
+        </div>
+        <br>
+
+        <!-- The dots/circles -->
+        <!-- <div style="text-align:center">
+            <span class="dot2" onclick="currentSlide2(1)"></span>
+            <span class="dot2" onclick="currentSlide2(2)"></span>
+            <span class="dot2" onclick="currentSlide2(3)"></span>
+        </div> -->
     </div>
 
     <div class="about-container">
