--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
     <div>
         <p class="red-font text-center">HOW WE DO IT</p>
-        <p class="black-font text-center">Our Company's Versatile Use Cases</p>
+        <p class="black-font text-center pt-8">Our Company's Versatile Use Cases</p>
         <!-- Slideshow container -->
         <div class="ver-slideshow-container py-16">
 
@@ -473,6 +473,85 @@
             <span class="dot2" onclick="currentSlide2(2)"></span>
             <span class="dot2" onclick="currentSlide2(3)"></span>
         </div> -->
+    </div>
+
+
+    <div>
+        <p class="black-font text-center">Success Stories Of Our Customers</p>
+        <div class="slideshow-container-cust py-16 mt-12">
+
+            <!-- Full-width images with number and caption text -->
+            <div class="mySlidesThree fade">
+                <div class="numbertext">1 / 3</div>
+                <div class="carousel-card-cust shadow-2xl flex justify-between">
+                    <div>
+                        <img class="w-28 firstQuo" src="./assets/icons/startQou.svg" alt="">
+                    </div>
+                    <div class="profile-card ">
+                        <img class="w-14 mx-auto " src="./assets/icons/pf.svg" alt="">
+                        <p class="black-font text-center add-up-space">Barry Allen</p>
+                        <p class="red-font text-center add-up-space">CEO, FACEBOOK INC.</p>
+                        <p class="normal-text text-center add-up-space">
+                            Bringing you the combination of Innovative Tech Classification combined with Customer
+                            Centric User
+                            Interface to make your processes & products efficient & customer friendly.</p>
+                    </div>
+                    <div>
+                        <img class="w-28 secondQuo" src="./assets/icons/endQuo.svg" alt="">
+                    </div>
+                </div>
+                <!-- <div class="text">Caption Text</div> -->
+            </div>
+
+            <div class="mySlidesThree fade">
+                <div class="numbertext">2 / 3</div>
+                <div class="carousel-card-cust shadow-2xl flex justify-between">
+                    <div>
+                        <img class="w-28 firstQuo" src="./assets/icons/startQou.svg" alt="">
+                    </div>
+                    <div class="profile-card ">
+                        <img class="w-14 mx-auto " src="./assets/icons/pf.svg" alt="">
+                        <p class="black-font text-center add-up-space">Barry Allen</p>
+                        <p class="red-font text-center add-up-space">CEO, FACEBOOK INC.</p>
+                        <p class="normal-text text-center add-up-space">
+                            Bringing you the combination of Innovative Tech Classification combined with Customer
+                            Centric User
+                            Interface to make your processes & products efficient & customer friendly.</p>
+                    </div>
+                    <div>
+                        <img class="w-28 secondQuo" src="./assets/icons/endQuo.svg" alt="">
+                    </div>
+                </div>
+                <!-- <div class="text">Caption Two</div> -->
+            </div>
+
+            <div class="mySlidesThree fade">
+                <div class="numbertext">2 / 3</div>
+                <div class="carousel-card-cust shadow-2xl flex justify-between">
+                    <div>
+                        <img class="w-28 firstQuo" src="./assets/icons/startQou.svg" alt="">
+                    </div>
+                    <div class="profile-card ">
+                        <img class="w-14 mx-auto " src="./assets/icons/pf.svg" alt="">
+                        <p class="black-font text-center add-up-space">Barry Allen</p>
+                        <p class="red-font text-center add-up-space">CEO, FACEBOOK INC.</p>
+                        <p class="normal-text text-center add-up-space">
+                            Bringing you the combination of Innovative Tech Classification combined with Customer
+                            Centric User
+                            Interface to make your processes & products efficient & customer friendly.</p>
+                    </div>
+                    <div>
+                        <img class="w-28 secondQuo" src="./assets/icons/endQuo.svg" alt="">
+                    </div>
+                </div>
+                <!-- <div class="text">Caption Two</div> -->
+            </div>
+
+
+            <!-- Next and previous buttons -->
+            <a class="prev shadow-md" onclick="plusSlides3(-1)">&#10094;</a>
+            <a class="next shadow-md" onclick="plusSlides3(1)">&#10095;</a>
+        </div>
     </div>
 
     <div class="about-container">
