--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./styles.css">
     <link rel="icon" type="image/x-icon" href="./assets/icons/logo.svg">
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="./index.js" ></script>
+    <script src="./index.js"></script>
     <script>
         tailwind.config = {
             theme: {
@@ -39,10 +39,9 @@
                 </div>
             </div>
             <div class="lg:hidden">
-                <button type="button" 
+                <button type="button"
                     class="-m-2.5 inline-flex items-center justify-center rounded-md p-2.5 text-gray-700"
-                    onclick="openMenu()"
-                    >
+                    onclick="openMenu()">
                     <span class="sr-only">Open main menu</span>
                     <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
                         aria-hidden="true">
@@ -53,7 +52,8 @@
             </div>
             <div class="hidden lg:flex">
                 <a href="#" class="pt-2 px-1 text-sm font-semibold leading-6 text-gray-900">Follow Us:</a>
-                <img class="h-10 pt-0.5 w-auto mr-2" src="./assets/icons/in.svg" alt="">
+                <a href="https://www.linkedin.com/company/codeupglobalsolution/mycompany/?viewAsMember=true"
+                    target="_blank"><img class="h-10 pt-0.5 w-auto mr-2" src="./assets/icons/in.svg" alt=""></a>
                 <button type="button"
                     class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">Contact
                     us</button>
@@ -90,9 +90,14 @@
                         </div>
                         <div class="py-6">
                             <div class="space-y-2 py-6"></div>
-                            <a href="#"
-                                class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">Follow
-                                us :</a>
+                            <div class="flex">
+                                <a href="#"
+                                    class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">Follow
+                                    us : </a>
+                                <a href="https://www.linkedin.com/company/codeupglobalsolution/mycompany/?viewAsMember=true"
+                                    target="_blank"><img class="h-10 pt-0.5 w-auto mr-2" src="./assets/icons/in.svg"
+                                        alt=""></a>
+                            </div>
                             <button type="button"
                                 class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">Contact
                                 us</button>
@@ -595,10 +600,10 @@
         <div class="footer-container flex">
             <div class="footer-sub">
                 <img class="h-auto w-64" src="./assets/icons/logo.svg" alt="">
-                <p class="phone-mail-text flex"><img class="h-auto w-6 mr-2" src="./assets/icons/phone.svg" alt=""> +91
-                    234123333334</p>
-                <p class="phone-mail-text flex"><img class="h-auto w-6 mr-2" src="./assets/icons/mail.svg"
-                        alt="">abcd@codeuptech.com</p>
+                <p class="phone-mail-text flex"><img class="h-auto w-6 mr-2" src="./assets/icons/phone.svg" alt="">+91
+                    93634 63195</p>
+                <a href="mailto:info@codeupglobal.com" target="_blank" class="phone-mail-text flex"><img
+                        class="h-auto w-6 mr-2" src="./assets/icons/mail.svg" alt="">info@codeupglobal.com</a>
             </div>
             <div class="footer-sub">
                 <p class="footer-header">Quick Links</p>
@@ -619,16 +624,14 @@
                 <div class="flex">
                     <img class="h-6 w-6 mr-2" src="./assets/icons/location.svg" alt="">
                     <p class="phone-mail-text">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua.
-                        Ut enim ad min
+                        431, Workafella HighStreet, Teynampet, Chennai - 600018
                     </p>
                 </div>
                 <div class="gmaps-card">
                     <div class="mapouter">
                         <div class="gmap_canvas">
                             <iframe width="100%" height="100%" id="gmap_canvas"
-                                src="https://maps.google.com/maps?q=chennai&t=&z=10&ie=UTF8&iwloc=&output=embed"
+                                src="https://maps.google.com/maps?width=600&amp;height=400&amp;hl=en&amp;q=431, Workafella HighStreet, Teynampet, Chennai - 600018&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"
                                 frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
                             <a href="https://2yu.co">2yu</a><br>
                             <style>
