minor css fixes

--- a/index.html
+++ b/index.html
@@ -638,10 +638,10 @@
     </div>
     <footer class="footer">
         <div class="footer-container flex">
-            <div class="footer-sub">
+            <div class="footer-sub pt-8">
                 <img class="h-auto w-64" src="./assets/icons/logo.svg" alt="">
 
-                <details class="lg:hidden question py-4 border-b border-grey-lighter">
+                <details class="lg:hidden question py-4 border-b border-grey-lighter mt-10">
 
                     <summary class="flex items-center footer-header">Quick Links
                         <button class="ml-auto">
@@ -666,7 +666,7 @@
                         <p class="footer-subheading">Contact Us</p>
                     </div>
                 </details>
-                <details class="lg:hidden mb-4 question py-4 border-b border-grey-lighter">
+                <details class="lg:hidden mb-4 question py-4 border-b border-grey-lighter mb-8">
 
                     <summary class="flex items-center footer-header">Services
                         <button class="ml-auto">
