--- a/index.html
+++ b/index.html
@@ -745,7 +745,7 @@
                 <p class="footer-subheading">Jobs</p>
             </div>
             <div class="footer-sub">
-                <div class="flex">
+                <div class="flex address">
                     <img class="h-6 w-6 mr-2" src="./assets/icons/location.svg" alt="">
                     <p class="phone-mail-text">
                         431, Workafella HighStreet, Teynampet, Chennai - 600018
