minor fixes in responsiveness

--- a/index.html
+++ b/index.html
@@ -202,8 +202,9 @@
                 <div class="numbertext">1 / 3</div>
                 <div class="ver-carousel-card">
                     <div class="ver-cnt">
-                        <div class="ver-crl-container hover:scale-105 transition duration-500">
-                            <img src="./assets/versatile/verasatile1.svg" class="ver-crl-image">
+                        <div class="ver-crl-container ">
+                            <img src="./assets/versatile/verasatile1.svg"
+                                class="ver-crl-image hover:scale-105 transition duration-500">
                             <div class="p-8">
                                 <p class="ver-header-font">Usecase 1:</p>
                                 <p class="normal-font mt-4">Unlock the full potential of our company's use case and
@@ -218,8 +219,9 @@
                             </div>
 
                         </div>
-                        <div class="ver-crl-container hover:scale-105 transition duration-500">
-                            <img src="./assets/versatile/vesatile2.svg" class="ver-crl-image">
+                        <div class="ver-crl-container ">
+                            <img src="./assets/versatile/vesatile2.svg"
+                                class="ver-crl-image hover:scale-105 transition duration-500">
                             <div class="p-8">
                                 <p class="ver-header-font">Usecase 1:</p>
                                 <p class="normal-font mt-4">Unlock the full potential of our company's use case and
@@ -243,8 +245,9 @@
                 <div class="numbertext">2 / 3</div>
                 <div class="ver-carousel-card">
                     <div class="ver-cnt">
-                        <div class="ver-crl-container hover:scale-105 transition duration-500">
-                            <img src="./assets/versatile/verasatile1.svg" class="ver-crl-image">
+                        <div class="ver-crl-container ">
+                            <img src="./assets/versatile/verasatile1.svg"
+                                class="ver-crl-image hover:scale-105 transition duration-500">
                             <div class="p-8">
                                 <p class="ver-header-font">Usecase 1:</p>
                                 <p class="normal-font mt-4">Unlock the full potential of our company's use case and
@@ -259,8 +262,9 @@
                             </div>
 
                         </div>
-                        <div class="ver-crl-container hover:scale-105 transition duration-500">
-                            <img src="./assets/versatile/vesatile2.svg" class="ver-crl-image">
+                        <div class="ver-crl-container ">
+                            <img src="./assets/versatile/vesatile2.svg"
+                                class="ver-crl-image hover:scale-105 transition duration-500">
                             <div class="p-8">
                                 <p class="ver-header-font">Usecase 1:</p>
                                 <p class="normal-font mt-4">Unlock the full potential of our company's use case and
@@ -284,8 +288,9 @@
                 <div class="numbertext">3 / 3</div>
                 <div class="ver-carousel-card">
                     <div class="ver-cnt">
-                        <div class="ver-crl-container hover:scale-105 transition duration-500">
-                            <img src="./assets/versatile/verasatile1.svg" class="ver-crl-image">
+                        <div class="ver-crl-container ">
+                            <img src="./assets/versatile/verasatile1.svg"
+                                class="ver-crl-image hover:scale-105 transition duration-500">
                             <div class="p-8">
                                 <p class="ver-header-font">Usecase 1:</p>
                                 <p class="normal-font mt-4">Unlock the full potential of our company's use case and
@@ -300,8 +305,9 @@
                             </div>
 
                         </div>
-                        <div class="ver-crl-container hover:scale-105 transition duration-500">
-                            <img src="./assets/versatile/vesatile2.svg" class="ver-crl-image">
+                        <div class="ver-crl-container ">
+                            <img src="./assets/versatile/vesatile2.svg"
+                                class="ver-crl-image hover:scale-105 transition duration-500">
                             <div class="p-8">
                                 <p class="ver-header-font">Usecase 1:</p>
                                 <p class="normal-font mt-4">Unlock the full potential of our company's use case and
@@ -325,13 +331,15 @@
             <a class="prev shadow-md" onclick="plusSlides2(-1)">&#10094;</a>
             <a class="next shadow-md" onclick="plusSlides2(1)">&#10095;</a>
         </div>
-       
+
 
         <!-- Next and previous buttons
         <a class="prev shadow-md" onclick="plusSlides2(-1)">&#10094;</a>
         <a class="next shadow-md" onclick="plusSlides2(1)">&#10095;</a> -->
     </div>
     <br>
+   
+
 
     <!-- The dots/circles -->
     <!-- <div style="text-align:center">
@@ -339,7 +347,6 @@
             <span class="dot2" onclick="currentSlide2(2)"></span>
             <span class="dot2" onclick="currentSlide2(3)"></span>
         </div> -->
-    </div>
 
     <div class="container-4 flex justify-around">
         <div class="sub-1-container-4">
@@ -396,17 +403,23 @@
 
     <div class="progress-bg">
         <div class="clients-container">
-            <div class="clients-container-images">
-                <img class="w-auto h-12 hover:scale-125 transition duration-500" src="./assets/clients/alpl.svg" alt="">
-                <img class="w-auto h-12 hover:scale-125 transition duration-500" src="./assets/clients/cxs.svg" alt="">
-                <img class="w-auto h-12 hover:scale-125 transition duration-500" src="./assets/clients/clematis.svg"
-                    alt="">
-                <img class="w-auto h-12 hover:scale-125 transition duration-500" src="./assets/clients/vet.svg" alt="">
-                <img class="w-auto h-12 hover:scale-125 transition duration-500" src="./assets/clients/taras.svg"
-                    alt="">
-                <img class="w-auto h-12 hover:scale-125 transition duration-500" src="./assets/clients/agraga.svg"
-                    alt="">
-            </div>
+            <marquee direction="left" class="clients-container-images">
+                <div class="marquee-img">
+                    <img class="w-auto h-12 hover:scale-125 transition duration-500" src="./assets/clients/alpl.svg"
+                        alt="">
+                    <img class="w-auto h-12 hover:scale-125 transition duration-500" src="./assets/clients/cxs.svg"
+                        alt="">
+                    <img class="w-auto h-12 hover:scale-125 transition duration-500" src="./assets/clients/clematis.svg"
+                        alt="">
+                    <img class="w-auto h-12 hover:scale-125 transition duration-500" src="./assets/clients/vet.svg"
+                        alt="">
+                    <img class="w-auto h-12 hover:scale-125 transition duration-500" src="./assets/clients/taras.svg"
+                        alt="">
+                    <img class="w-auto h-12 hover:scale-125 transition duration-500" src="./assets/clients/agraga.svg"
+                        alt="">
+                </div>
+
+            </marquee>
 
             <div class="container-progress">
                 <div class="progress">
@@ -414,12 +427,14 @@
                     <div class="overlay"></div>
                     <div class="left"></div>
                     <div class="right"></div>
+                    <div class="percent text">Users Added</div>
                 </div>
                 <div class="progress">
                     <span class="title timer" data-from="0" data-to="70" data-speed="1500">70</span>
                     <div class="overlay"></div>
                     <div class="left"></div>
                     <div class="right"></div>
+                    <div class="percent text">Marketing</div>
                 </div>
 
                 <div class="progress">
@@ -427,6 +442,7 @@
                     <div class="overlay"></div>
                     <div class="left"></div>
                     <div class="right"></div>
+                    <div class="percent text">Marketing</div>
                 </div>
 
                 <div class="progress">
@@ -434,6 +450,7 @@
                     <div class="overlay"></div>
                     <div class="left"></div>
                     <div class="right"></div>
+                    <div class="percent text">Users Added</div>
                 </div>
             </div>
         </div>
