--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         <p class="red-font text-center">HOW WE DO IT</p>
         <p class="black-font text-center pt-8">Our Company's Versatile Use Cases</p>
         <!-- Slideshow container -->
-        <div class="ver-slideshow-container py-16">
+        <div class="small-hidden ver-slideshow-container py-16">
 
             <!-- Full-width images with number and caption text -->
             <div class="mySlidesTwo fade">
@@ -331,7 +331,94 @@
             <a class="prev shadow-md" onclick="plusSlides2(-1)">&#10094;</a>
             <a class="next shadow-md" onclick="plusSlides2(1)">&#10095;</a>
         </div>
+        
 
+        <div class="lg:hidden ver-slideshow-container py-16">
+
+            <!-- Full-width images with number and caption text -->
+            <div class="mySlidesTwoResp fade">
+                <div class="numbertext">1 / 3</div>
+                <div class="ver-carousel-card">
+                    <div class="ver-cnt">
+                        <div class="ver-crl-container ">
+                            <img src="./assets/versatile/verasatile1.svg"
+                                class="ver-crl-image hover:scale-105 transition duration-500">
+                            <div class="p-8">
+                                <p class="ver-header-font">Usecase 1:</p>
+                                <p class="normal-font mt-4">Unlock the full potential of our company's use case and
+                                    witness the transformative power it holds. From streamlining operations to enhancing
+                                    customer experiences, our innovative solution revolutionizes the way businesses
+                                    operate. </p>
+                            </div>
+                            <div class="px-4">
+                                <button type="submit"
+                                    class="w-full mx-auto text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">
+                                    Read more</button>
+                            </div>
+
+                        </div>
+                      
+                    </div>
+                </div>
+                <!-- <div class="text">Caption Text</div> -->
+            </div>
+
+            <div class="mySlidesTwoResp fade">
+                <div class="numbertext">2 / 3</div>
+                <div class="ver-carousel-card">
+                    <div class="ver-cnt">
+                        <div class="ver-crl-container ">
+                            <img src="./assets/versatile/vesatile2.svg"
+                                class="ver-crl-image hover:scale-105 transition duration-500">
+                            <div class="p-8">
+                                <p class="ver-header-font">Usecase 1:</p>
+                                <p class="normal-font mt-4">Unlock the full potential of our company's use case and
+                                    witness the transformative power it holds. From streamlining operations to enhancing
+                                    customer experiences, our innovative solution revolutionizes the way businesses
+                                    operate. </p>
+                            </div>
+                            <div class="px-4">
+                                <button type="submit"
+                                    class="w-full mx-auto text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">
+                                    Read more</button>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <!-- <div class="text">Caption Two</div> -->
+            </div>
+
+            <div class="mySlidesTwoResp fade">
+                <div class="numbertext">3 / 3</div>
+                <div class="ver-carousel-card">
+                    <div class="ver-cnt">
+                        <div class="ver-crl-container ">
+                            <img src="./assets/versatile/verasatile1.svg"
+                                class="ver-crl-image hover:scale-105 transition duration-500">
+                            <div class="p-8">
+                                <p class="ver-header-font">Usecase 1:</p>
+                                <p class="normal-font mt-4">Unlock the full potential of our company's use case and
+                                    witness the transformative power it holds. From streamlining operations to enhancing
+                                    customer experiences, our innovative solution revolutionizes the way businesses
+                                    operate. </p>
+                            </div>
+                            <div class="px-4">
+                                <button type="submit"
+                                    class="w-full mx-auto text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">
+                                    Read more</button>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <!-- <div class="text">Caption Three</div> -->
+            </div>
+
+            <!-- Next and previous buttons -->
+            <a class="lg:hidden prev shadow-md" onclick="plusSlides2Resp(-1)">&#10094;</a>
+            <a class="lg:hidden next shadow-md" onclick="plusSlides2Resp(1)">&#10095;</a>
+        </div>
 
         <!-- Next and previous buttons
         <a class="prev shadow-md" onclick="plusSlides2(-1)">&#10094;</a>
@@ -506,7 +593,7 @@
             <div class="numbertext">3 / 3</div>
             <div class="carousel-card shadow-2xl">
                 <img src="./assets/customer/carousel1.svg"
-                    class="carousel-width hover:scale-105 transition duration-500"">
+                    class="carousel-width hover:scale-105 transition duration-500">
                     <div class=" carousel-content">
                 <p class="black-font resp-text-center resp-text-small">Case study title 1:</p>
                 <p class="normal-font resp-text-center ">
