Add About us Page

--- a/index.html
+++ b/index.html
@@ -160,9 +160,11 @@
                     witness the most sophisticated tech in play. From Wireframes to products,
                     let CodeUp Global wave the Magic wand
                 </p>
-                <button type="submit"
-                    class="w-48 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">
-                    Know More About Us</button>
+                <a href="./aboutUs.html">
+                    <button type="submit"
+                        class="w-48 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">
+                        Know More About Us</button>
+                </a>
             </div>
         </div>
     </div>
@@ -331,7 +333,7 @@
             <a class="prev shadow-md" onclick="plusSlides2(-1)">&#10094;</a>
             <a class="next shadow-md" onclick="plusSlides2(1)">&#10095;</a>
         </div>
-        
+
 
         <div class="lg:hidden ver-slideshow-container py-16">
 
@@ -357,7 +359,7 @@
                             </div>
 
                         </div>
-                      
+
                     </div>
                 </div>
                 <!-- <div class="text">Caption Text</div> -->
@@ -425,7 +427,7 @@
         <a class="next shadow-md" onclick="plusSlides2(1)">&#10095;</a> -->
     </div>
     <br>
-   
+
 
 
     <!-- The dots/circles -->
@@ -594,24 +596,24 @@
             <div class="carousel-card shadow-2xl">
                 <img src="./assets/customer/carousel1.svg"
                     class="carousel-width hover:scale-105 transition duration-500">
-                    <div class=" carousel-content">
-                <p class="black-font resp-text-center resp-text-small">Case study title 1:</p>
-                <p class="normal-font resp-text-center ">
-                    Bringing you the combination of Innovative Tech Classification combined
-                    with Customer Centric User Interface to make your processes & products efficient
-                    & customer friendly.
-                </p>
-                <button type="submit"
-                    class="button-resp-auto w-32 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">
-                    Read more</button>
+                <div class=" carousel-content">
+                    <p class="black-font resp-text-center resp-text-small">Case study title 1:</p>
+                    <p class="normal-font resp-text-center ">
+                        Bringing you the combination of Innovative Tech Classification combined
+                        with Customer Centric User Interface to make your processes & products efficient
+                        & customer friendly.
+                    </p>
+                    <button type="submit"
+                        class="button-resp-auto w-32 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">
+                        Read more</button>
+                </div>
             </div>
+            <!-- <div class="text">Caption Three</div> -->
         </div>
-        <!-- <div class="text">Caption Three</div> -->
-    </div>
 
-    <!-- Next and previous buttons -->
-    <a class="prev shadow-md" onclick="plusSlides(-1)">&#10094;</a>
-    <a class="next shadow-md" onclick="plusSlides(1)">&#10095;</a>
+        <!-- Next and previous buttons -->
+        <a class="prev shadow-md" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next shadow-md" onclick="plusSlides(1)">&#10095;</a>
     </div>
     <br>
 
