Add profile card in aboutus page

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -107,9 +107,9 @@
             </div>
         </div>
     </header>
-  
-        <img src="./assets/about-landing.svg" class="mx-auto mt-4"/>
-    
+
+    <img src="./assets/about-landing.svg" class="mx-auto mt-4" />
+
 
 
     <div class="w-full py-8">
@@ -128,6 +128,30 @@
             </div>
 
         </marquee>
+    </div>
+
+    <div class="birdsContainer">
+        <img src="./assets/birdsLight.svg" class="birdsCard" />
+    </div>
+
+    <div class="profile-card-about-page">
+        <div class="p-4 profile-details">
+            <img src="./assets/icons/startQou.svg" />
+            <p class="px-4 mb-8">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            </p>
+            <p class="black-font pt-8 px-4 name-card" style="font-size: 20px;">Aravind Kumaran</p>
+            <p class="px-4 name-card">Founder and CEO</p>
+        </div>
+        <img src="./assets/aravind.svg" class="profile-image" />
+
+    </div>
+
+    <div class="birdsContainer">
+        <div></div>
+        <div class="blueCard"></div>
     </div>
 
     <div class="w-full py-8">
@@ -168,7 +192,7 @@
         <img src="./assets/pink-ellipse.svg" style="margin-top: 120px;" />
     </div>
     <div class="news-letter-card ">
-        <p class="black-font"style="color: #FFFFFF;" >
+        <p class="black-font" style="color: #FFFFFF;">
             Subscribe <br />
             for our daily newsletter <span style="font-family: sans-serif;">!</span>
         </p>
@@ -181,7 +205,7 @@
                     <button type="submit"
                         class="button-resp mt-0.5 w-32 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">
                         Subscribe
-                        </button>
+                    </button>
                 </div>
             </form>
         </div>
