Add About us routing

--- a/index.html
+++ b/index.html
@@ -184,9 +184,11 @@
                 solutions that drive growth and success
 
             </p>
-            <button type="submit"
-                class="my-2 button-resp w-48 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">
-                Know More About Us</button>
+            <a href="./aboutUs.html">
+                <button type="submit"
+                    class="my-2 button-resp w-48 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">
+                    Know More About Us</button>
+            </a>
         </div>
         <div>
             <img class="tech-image img-resp-hide" src="./assets/techstack.svg" alt="">
@@ -715,9 +717,11 @@
                 evolved from a tech service providing company to a tech enabling company. Our strength lies
                 in our unwavering commitment to customer communication and optimizing time utilization
                 to build innovative products that drive business growth.</p>
-            <button type="submit"
-                class="w-32 button-resp text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">
-                Read more</button>
+            <a href="./aboutUs.html">
+                <button type="submit"
+                    class="w-32 button-resp text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">
+                    Read more</button>
+            </a>
         </div>
     </div>
     <div class="footer-form">
