Add MInor Padding

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -154,7 +154,7 @@
         <div class="blueCard"></div>
     </div>
 
-    <div class="w-full py-8">
+    <div class="w-full py-8 pt-24">
         <p class="red-font text-center">KNOW US</p>
         <p class="black-font text-center py-6">About Codeup</p>
         <p class="grey-font text-center px-2" style="max-width:1156px;margin: auto;">
