--- a/aboutUs.html
+++ b/aboutUs.html
@@ -30,7 +30,9 @@
             <div class="flex items-center gap-x-12">
                 <a href="#" class="-m-1.5 p-1.5">
                     <span class="sr-only">Your Company</span>
-                    <img class="h-12 w-44" src="./assets/icons/logo.svg" alt="">
+                    <a href="./index.html">
+                        <img class="h-12 w-44" src="./assets/icons/logo.svg" alt="">
+                    </a>
                 </a>
                 <div class="hidden lg:flex lg:gap-x-12">
                     <a href="#" class="text-sm font-semibold leading-6 text-gray-900">Home</a>
@@ -68,7 +70,9 @@
                 <div class="flex items-center justify-between">
                     <a href="#" class="-m-1.5 p-1.5">
                         <span class="sr-only">Your Company</span>
-                        <img class="h-12 w-44" src="./assets/icons/logo.svg" alt="">
+                        <a href="./index.html">
+                            <img class="h-12 w-44" src="./assets/icons/logo.svg" alt="">
+                        </a>
                     </a>
                     <button type="button" class="-m-2.5 rounded-md p-2.5 text-gray-700" onclick="closeMenu()">
                         <span class="sr-only">Close menu</span>
