--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
             <div class="flex items-center gap-x-12">
                 <a href="#" class="-m-1.5 p-1.5">
                     <span class="sr-only">Your Company</span>
-                    <img class="h-12 w-44" src="./assets/icons/logo.svg" alt="">
+                    <a href="./index.html">
+                        <img class="h-12 w-44" src="./assets/icons/logo.svg" alt="">
+                    </a>
+                
                 </a>
                 <div class="hidden lg:flex lg:gap-x-12">
                     <a href="#" class="text-sm font-semibold leading-6 text-gray-900">Home</a>
@@ -68,7 +71,9 @@
                 <div class="flex items-center justify-between">
                     <a href="#" class="-m-1.5 p-1.5">
                         <span class="sr-only">Your Company</span>
-                        <img class="h-12 w-44" src="./assets/icons/logo.svg" alt="">
+                        <a href="./index.html">
+                            <img class="h-12 w-44" src="./assets/icons/logo.svg" alt="">
+                        </a>
                     </a>
                     <button type="button" class="-m-2.5 rounded-md p-2.5 text-gray-700" onclick="closeMenu()">
                         <span class="sr-only">Close menu</span>
@@ -822,7 +827,7 @@
                             <div class="icon-container">
                                 <p>
                                 </p>
-                                <img src="./assets/icons/close.svg" alt="" class="close-icon"  onclick="closePopup()" />
+                                <img src="./assets/icons/close.svg" alt="" class="close-icon" onclick="closePopup()" />
                             </div>
                             <div class="desc-contact">
                                 <div class="contact-profile-desc">
@@ -830,10 +835,12 @@
                                     solutions that surpassed expectations. Highly recommended!
                                 </div>
                                 <div class="contact-profile-desc">
-                                  Matt Greaves
+                                    Matt Greaves
                                 </div>
-                                <div class="contact-profile-desc" style="font-weight: 600;font-size:12px;margin-top:-16px;">
-                                    <span>CEO, MOBILETECH PVT. LTD.</span></div>
+                                <div class="contact-profile-desc"
+                                    style="font-weight: 600;font-size:12px;margin-top:-16px;">
+                                    <span>CEO, MOBILETECH PVT. LTD.</span>
+                                </div>
                             </div>
                         </div>
 
@@ -848,7 +855,9 @@
     <footer class="footer">
         <div class="footer-container flex">
             <div class="footer-sub pt-8">
-                <img class="h-auto w-64" src="./assets/icons/logo.svg" alt="">
+                <a href="./index.html">
+                    <img class="h-auto w-64" src="./assets/icons/logo.svg" alt="">
+                </a>
 
                 <details class="lg:hidden question py-4 border-b border-grey-lighter mt-10">
 
@@ -868,7 +877,9 @@
 
                     <div class="footer-sub mt-4">
                         <p class="footer-subheading">Blog</p>
-                        <p class="footer-subheading">About Us</p>
+                        <p class="footer-subheading">
+                            <a href="./aboutUs.html">About Us</a>
+                        </p>
                         <p class="footer-subheading">Jobs</p>
                         <p class="footer-subheading">Usecases</p>
                         <p class="footer-subheading">Publishes</p>
@@ -893,7 +904,9 @@
 
                     <div class="footer-sub mt-4">
                         <p class="footer-subheading">Blog</p>
-                        <p class="footer-subheading">About Us</p>
+                        <p class="footer-subheading">
+                            <a href="./aboutUs.html">About Us</a>
+                        </p>
                         <p class="footer-subheading">Jobs</p>
                     </div>
                 </details>
@@ -941,7 +954,9 @@
             <div class="footer-sub img-resp-hide ">
                 <p class="footer-header">Quick Links</p>
                 <p class="footer-subheading">Blog</p>
-                <p class="footer-subheading">About Us</p>
+                <p class="footer-subheading">
+                    <a href="./aboutUs.html">About Us</a>
+                </p>
                 <p class="footer-subheading">Jobs</p>
                 <p class="footer-subheading">Usecases</p>
                 <p class="footer-subheading">Publishes</p>
@@ -950,7 +965,9 @@
             <div class="footer-sub img-resp-hide ">
                 <p class="footer-header">Services</p>
                 <p class="footer-subheading">Blog</p>
-                <p class="footer-subheading">About Us</p>
+                <p class="footer-subheading">
+                    <a href="./aboutUs.html">About Us</a>
+                </p>
                 <p class="footer-subheading">Jobs</p>
             </div>
             <div class="footer-sub">
